LU-1061 agl: cl_locks_prune() abort AGL reply upcall

The AGL sponsor holds user reference count on the cl_lock before
triggering AGL RPC. The user reference count on the cl_lock will
be released by AGL RPC reply upcall. Such AGL mechanism conflict
with cl_locks_prune(), which requires no lock is in active using
when the last iput() called.

Introduce another cl_lock ops: cl_lock_operations::clo_abort(),
to resolve above conflict as following:

1) If cl_locks_prune() finds some lock is in using, it calls
   clo_abort() to abort other cl_lock operations on the lock.
   Currently, it mainly processes the stub for AGL RPC reply
   upcall.

2) For AGL RPC reply upcall, it will detect whether the lock
   is aborted or not firstly. If yes, do nothing; otherwise,
   set some flag to prevent to be aborted by cl_locks_prune(),
   and then process the upcall as normal.

Signed-off-by: Fan Yong <yong.fan@whamcloud.com>
Change-Id: I8998c0a247448b1b6c6e99995c9d956b1666279b